added readme and modified index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
       <li>Womens</li>
       <li>About</li>
       <li>Contact</li>
-
     </ul>
   </div>
+
+  <h2>Featured Products</h2>
+
+<div>
+
+  <img src="" alt="">
+  <img src="" alt="">
+  <img src="" alt="">
+
+</div>
+
 
 
 
